--- a/src/Component/BOM/bom-list/bom-list.component.html
+++ b/src/Component/BOM/bom-list/bom-list.component.html
@@ -1,1 +1,19 @@
-<p>bom-list works!</p>
+<h2>BOM List</h2>
+<div class="table-container">
+  <table>
+    <thead>
+      <tr>
+        <th>BOM Code</th>
+        <th>Description</th>
+        <th>Version</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>BOM001</td>
+        <td>Wire harness</td>
+        <td>1.0</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
