--- a/src/Component/WorkCenter/work-center-list/work-center-list.component.html
+++ b/src/Component/WorkCenter/work-center-list/work-center-list.component.html
@@ -1,1 +1,19 @@
-<p>work-center-list works!</p>
+<h2>Work Centre List</h2>
+<div class="table-container">
+  <table>
+    <thead>
+      <tr>
+        <th>Centre Code</th>
+        <th>Name</th>
+        <th>Capacity</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>WC001</td>
+        <td>Assembly Line A</td>
+        <td>250</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
