--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="app-container">
   <nav class="sidebar">
-    <img src="assets\COFICAB_Powered-by-passion-300x84.png" class="company-logo">
+    <img src="assets/COFICAB_Powered-by-passion-300x84.png" class="company-logo">
+
     <div class="logo">CMES App</div>
     <ul class="nav-links">
       <li>
