--- a/src/Component/Routing/routing-list/routing-list.component.html
+++ b/src/Component/Routing/routing-list/routing-list.component.html
@@ -1,1 +1,19 @@
-<p>routing-list works!</p>
+<h2>Routing List</h2>
+<div class="table-container">
+  <table>
+    <thead>
+      <tr>
+        <th>Routing ID</th>
+        <th>Steps</th>
+        <th>Duration</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>RT001</td>
+        <td>Cutting > Crimping</td>
+        <td>3h</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
