--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,32 +9,23 @@
         <i class="fas fa-layer-group"></i>
         <span>Classification</span>
       </a>
-      <ul class="sub-menu">
-        <li><a href="#">Submenu 1</a></li>
-        <li><a href="#">Submenu 2</a></li>
-      </ul>
+     
 
     </li>
-      <li class="nav-item">
+      <!--<li class="nav-item">
        
         <a routerLink="/alternativbom" routerLinkActive="active">
           <i class="fas fa-exchange-alt"></i>
           <span>Alternative BOM</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
-      </li>
+        
+      </li>-->
       <li class="nav-item">
         <a routerLink="/characteristic" routerLinkActive="active">
           <i class="fas fa-tags"></i>
           <span>Characteristic</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
+        
       </li>
       
       <li class="nav-item">
@@ -42,60 +33,81 @@
           <i class="fas fa-list-alt"></i>
           <span>BOM</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
+      
       </li>
       <li class="nav-item">
         <a routerLink="/material/list" routerLinkActive="active">
           <i class="fas fa-cubes"></i>
           <span>Material</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
+        
       </li>
       <li class="nav-item">
         <a routerLink="/product-order" routerLinkActive="active">
           <i class="fas fa-clipboard-list"></i>
           <span>Product Order</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
+       
       </li>
       <li class="nav-item">
         <a routerLink="/product-version" routerLinkActive="active">
           <i class="fas fa-code-branch"></i>
           <span>Product Version</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
+      
       </li>
       <li class="nav-item">
         <a routerLink="/routing" routerLinkActive="active">
           <i class="fas fa-route"></i>
           <span>Routing</span>
         </a>
-        <ul class="sub-menu">
+        <!--<ul class="sub-menu">
           <li><a href="#">Submenu 1</a></li>
           <li><a href="#">Submenu 2</a></li>
-        </ul>
+        </ul>-->
       </li>
       <li class="nav-item">
         <a routerLink="/work-centre" routerLinkActive="active">
           <i class="fas fa-industry"></i>
           <span>Work Centre</span>
         </a>
-        <ul class="sub-menu">
-          <li><a href="#">Submenu 1</a></li>
-          <li><a href="#">Submenu 2</a></li>
-        </ul>
+        
+      </li>
+      <li class="nav-item">
+        <a routerLink="/characteristic-assignment" routerLinkActive="active">
+          <i class="fas fa-tasks"></i>
+          <span>Characteristic Assignment</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/characteristic" routerLinkActive="active">
+          <i class="fas fa-tags"></i>
+          <span>Characteristic</span>
+        </a>
+      </li>
+     <!-- <li class="nav-item">
+        <a routerLink="/characteristic-value" routerLinkActive="active">
+          <i class="fas fa-sliders-h"></i>
+          <span>Characteristic Value</span>
+        </a>
+      </li>-->
+      <li class="nav-item">
+        <a routerLink="/classification" routerLinkActive="active">
+          <i class="fas fa-layer-group"></i>
+          <span>Classification</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/controle-model" routerLinkActive="active">
+          <i class="fas fa-cogs"></i>
+          <span>Controle Model</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/event" routerLinkActive="active">
+          <i class="fas fa-bolt"></i>
+          <span>Event</span>
+        </a>
       </li>
     </ul>
   </nav>
